server/public/assets/css/style.css
/* ... */
#player_overlay{
    background-color:black;
    position: absolute;
    top: calc(-100vh + 64px + 26px);
    width:100%;
    color:white;
    height: calc(100vh - 64px - 32px);
}

#player_overlay_text{
    width:100%;
}

#searchform{
    width: 50%;
    margin-left: 25%;

}

nav .zbrand.channel-logo-container {
    overflow: visible;
}

.channelpage{
    background-color:#2D2D2D;
    -webkit-transition: background-color .5s ease;
    -moz-transition: background-color .5s ease;
    -o-transition: background-color .5s ease;
    transition: background-color .5s ease;
}

.main{
    width: 100%;
    max-width:99%;
    margin: 0px;
    padding:0px;
}

#nav {
    background-color: rgba(0, 0, 0, 0.3);
}

.control-list{
    position: fixed;
    top: 0;
    right: 0;
    z-index: 999;
}

.title-container{
    position: initial;
    display: inline-block;
    overflow: hidden;
    width: auto;
    height: 100%;
    left: 0;
}

.title-container li{
    height: 64px;
    height:100%;
    padding: 0 15px;
    width: 100%;
}

.search-container{
    display: block;
}

.song-title{
    font-size: 22px;
    font-weight: 300;
}

.second-title{
    width: 100%;
}

.second-title-container{
    padding: 0 10%;
    width: 100%;
}

#playlist{
    /*padding:0px 15px;*/
    flex:1;
    z-index: 9;
    position: relative;
    height: calc(100vh - 64px) !important;
    min-width: 338px;
    padding-left: 0px;
    /*background-color:rgba(0,0,0,0.2);*/
}

.castButton{
    /* display: none; !important*/
    height: 32px;
    width: 32px;
    padding-top: 3px;
    padding-bottom: 2px;
    background: transparent;
    border: none;
    float: right;
    --disconnected-color: white;
    --connected-color: #ff9800;
}

.castButton:focus {
    background: transparent;
}

.castButton-white-active {
    --connected-color: white !important;
}

.castButton-unactive, .castButton-unactive:active, .castButton-unactive:focus, .castButton-unactive:hover, .castButton-active, .castButton-active:active, .castButton-active:hover, .castButton-active:focus {
    width: 33px;
    height: 33px;
    float: right;
    /*margin: 0px 25px 0px -10px;*/
    background: transparent;
    border: none;
    background: transparent;
    color: white;
    border: none;
    font-size:18px;
    /*padding-right: 1%;*/
}

.castButton-unactive i, .castButton-active i{
    font-size: 20px;
    margin-top: 3px;
}

/*.castButton-active, .castButton-active:active, .castButton-active:hover, .castButton-active:focus{
font-size: 5rem;
margin-top: -70px;
margin-right: 52%;
}*/

.chat-link{
    -webkit-transition:color 1s;
    -moz-transition:color 1s;
    -o-transition:color 1s;
    transition: color 1s;
}

#player{
    height:95%;
    height: calc(100% - 32px);
    position: relative;
    transform: translate(0%, 0%);
    z-index: 99;
    opacity: 0;
    -webkit-transition: transform .5s ease-out, width .5s ease-out, height .5s ease-out, opacity 1s;
    transition: transform .5s ease-out, width .5s ease-out, height .5s ease-out, opacity 1s;
    -moz-transition: transform .5s ease-out, width .5s ease-out, height .5s ease-out, opacity 1s;
    -o-transition: transform .5s ease-out, width .5s ease-out, height .5s ease-out, opacity 1s;
}

#fireplace_player{
    z-index: 999;
    width: calc(100% - .75rem);
    height: calc(100% - 32px);
    position: absolute;
    display:none;
    pointer-events: none;
}

.chan{
    padding-right:10px;
    /*max-width:22vw;*/
    text-shadow: 4px 4px 9px rgba(0, 0, 0, 0.42);
}

.nav-btn
{
    transition: background-color .2s;
    min-width: 64px;
    float:right;
    text-align: center;
}
.nav-btn:hover{background-color:rgba(0,0,0,0.6);}
.hover-text{display:none;}
.nav-btn:hover > .hover-text {
    display: flex;
    justify-content: center;
}

nav ul li:hover, nav ul li.active {
    background-color: rgba(0,0,0,0.1);
}

.change_user_pass:hover, .delete-all:hover {
    background-color: initial;
}

.list-image, .list-suggested-image{
    width: 34%;
    height: 100%;
    float: left;
}

.add-suggested{
    height:100%;
    width: 90%;
}

.list-image:after {
    -webkit-transition: opacity .3s;
    transition: opacity .3s;
    font-family: "Material Icons";
    content:"thumb_up";
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    color: white;
    font-size: -webkit-xxx-large;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background: rgba(0,0,0,0.8);
    opacity: 0;
    /*transition: all .1s ease;*/
    display: flex;
    align-items: center;
    justify-content: center;
}

.list-suggested-image:after {
    font-family: "Material Icons";
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    content: "check";
    color:white;
    font-size: calc(100vh / 15);
    position:absolute;
    width:100%; height:100%;
    top:0; left:0;
    background:rgba(0,0,0,0.8);
    opacity:0;
    transition: all .1s ease;
}

.vote-container{
    height: 100%;
    width: 90%;
}

.vote-container:hover .list-image:after, .add-suggested:hover .list-suggested-image:after {
    opacity:1;
}



.vote-span{
    opacity: 0.7;
    padding: 0 0 0 10px;
    color:white !important;
}

.list-song .card-content{padding:0;}
.list-title{
    display:block;
    color:white;
    font-size:1em;
    text-align:left;
    padding: 0 10px 0 10px;
    line-height: 2.6rem;
    /* width: 57%; */
}

.add-suggested .card-content .list-title{
    line-height: 3.5rem;
}

.card-image{cursor:pointer}
.card{
    margin:2.5px 0 2.5px 0 !important;
    overflow:hidden;
    transition: box-shadow 0s;
}
/* ... */

